docs: added responses
